# mlops_loadconsumption

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  cloudbuild.yaml  data.dvc  pyproject.toml  requirements.txt  requirements_dev.txt  tasks.py  train.sh
.devcontainer/: devcontainer.json
.dvc/: config
.github/workflows/: data-tests.yaml  integration-tests.yaml  linting.yaml  pre-commit-update.yaml  tests.yaml  unit-tests.yaml
configs/: config.py  config.yaml
data/processed_data/: DK_load_processed.csv
data/processed_data/splits/: test.csv  train.csv  val.csv
data/raw_data/: DK_load_raw.csv
dockerfiles/: api.dockerfile  train.dockerfile  train_l.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
models/: conv1d_model.pt
outputs/2026-01-12/22-54-37/.hydra/: config.yaml  hydra.yaml
outputs/2026-01-12/22-59-15/.hydra/: config.yaml  hydra.yaml
outputs/2026-01-12/23-00-34/.hydra/: config.yaml  hydra.yaml
outputs/2026-01-17/18-50-38/.hydra/: hydra.yaml
outputs/2026-01-17/18-52-43/.hydra/: config.yaml  hydra.yaml
outputs/2026-01-17/20-41-18/.hydra/: config.yaml  hydra.yaml
outputs/2026-01-17/20-41-52/.hydra/: hydra.yaml
outputs/2026-01-17/20-44-25/.hydra/: hydra.yaml
reports/: README.md  report.html  report.py
src/mlops_loadconsumption/: api.py  data.py  drift.py  model.py  monitor.py  train.py  train_conf.py  train_config.py  visualize.py
tests/: __init__.py  conftest.py  test_api.py
tests/data/: test_data.py
tests/integration/: test_model.py
tests/unit/: test_utils.py
