[build-system]
requires = ["uv_build>=0.9.22,<0.10.0"]
build-backend = "uv_build"

[project]
name = "mlops_loadconsumption"
version = "0.0.1"
description = "TBD"
authors = [
  { name = "yahei-DTU", email = "your@email.com" },
]

keywords = ["machine learning", "MLOps"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "entsoe-py>=0.7.8",
    "fastapi==0.115.6",
    "numpy>=2.3.0,<2.4.0",
    "ipykernel>=7.1.0",
    "torch==2.6.0",
    "typer==0.15.1",
    "uvicorn==0.34.0",
    "holidays>=0.88",
    "scikit-learn>=1.8.0",
    "tensorflow>=2.20.0",
    "plotly>=6.5.2",
    "hydra-core>=1.3.0",
]

[dependency-groups]
dev = [
    "coverage==7.6.9",
    "invoke==2.2.0",
    "mkdocs-material==9.4.6",
    "mkdocs==1.6.1",
    "pre-commit==4.1.0",
    "pytest==8.3.4",
    "ruff==0.1.3",
    "mkdocstrings-python==1.12.2",
    "httpx>=0.24.0",
]


[tool.uv.sources]
torch = [
    { index = "pytorch-cpu" },
]
torchvision = [
    { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.ruff]
line-length = 120

[tool.coverage.run]
omit = ["tests/*"]
